--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-chat-scroll": "^1.4.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
