--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "anyanime": "^1.2.37",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "js-image-generator": "^1.0.3",
+    "sweetalert2": "^11.7.3",
     "vue": "^2.6.14",
     "vue-chat-scroll": "^1.4.0",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuejs-avatar-generator": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
